--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10"
 sentence-transformers = "^2.2.2"
 langchain = "^0.0.187"
 openai = "^0.27.7"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
