--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sentence-transformers = "^2.2.2"
 langchain = "^0.0.187"
 openai = "^0.27.7"
 python-dotenv = "^1.0.0"
+google-search-results = "^2.4.2"
 
 
 [build-system]
